--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -172,41 +172,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">Tuesday 12/12/2023</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">84 - 21 - 37 - 33 - 65</p>
-                <p class="machine"> 8 - 75 - 44 - 18 - 43</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">76 - 42 - 15 - 54 - 12</p>
-                <p class="machine">60 - 71 - 81 - 68 - 39</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">27 - 72 - 74 - 31 -  4</p>
-                <p class="machine">60 - 77 - 20 - 89 - 65</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">42 - 70 - 20 - 88 - 11</p>
-                <p class="machine">81 - 18 - 48 - 27 - 57</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky G</h3>
-                <p class="winning">33 - 76 - 75 - 11 - 77</p>
-                <p class="machine">14 -  7 - 90 - 32 - 21</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">60 - 46 - 50 - 9 - 15</p>
-                <p class="machine">36 - 66 - 14 - 52 - 89</p>        
-            </article>
-        </section>
-
-
-        <section aria-label="yesterday result">
             <h2 class="date">wednesday 13/12/2023</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -237,6 +202,40 @@
                 <h3 class="game">Lucky</h3>
                 <p class="winning">19 - 52 - 38 - 69 - 41</p>
                 <p class="machine">24 - 47 - 13 - 14 - 60</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">thursday 14/12/2023</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">45 - 52 -  6 - 23 - 66</p>
+                <p class="machine">64 - 82 -  5 - 16 - 38</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">39 - 11 - 63 - 27 - 36</p>
+                <p class="machine">66 - 84 - 48 - 32 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">54 - 23 - 80 - 84 - 48</p>
+                <p class="machine">25 - 74 - 40 - 75 - 31</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">90 - 70 - 19 - 10 - 62</p>
+                <p class="machine">79 -  2 - 63 - 25 -  3</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">88 - 80 - 52 - 17 - 27</p>
+                <p class="machine">42 - 45 - 72 - 33 - 57</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">27 -  6 - 35 -  9 - 77</p>
+                <p class="machine">31 -  5 - 21 - 76 - 57</p>        
             </article>
         </section>
     </div>
