--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -172,40 +172,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">wednesday 13/12/2023</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">72 -  1 - 68 -  7 - 29</p>
-                <p class="machine">34 - 89 - 43 - 77 - 80</p>        
-            </article>
-            <article>
-                <h3 class="game">mark II</h3>
-                <p class="winning">23 - 86 - 75 - 61 - 28</p>
-                <p class="machine"> 1 - 18 - 65 -  6 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">80 -  6 - 75 - 10 - 30</p>
-                <p class="machine">67 - 64 - 90 - 1 - 58</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">75 - 31 - 49 - 77 -  8</p>
-                <p class="machine">78 - 84 -  1 - 40 -  5</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">56 - 26 - 77 - 38 - 14</p>
-                <p class="machine">19 - 48 - 36 -  5 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">19 - 52 - 38 - 69 - 41</p>
-                <p class="machine">24 - 47 - 13 - 14 - 60</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">thursday 14/12/2023</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -236,6 +202,40 @@
                 <h3 class="game">Bingo</h3>
                 <p class="winning">27 -  6 - 35 -  9 - 77</p>
                 <p class="machine">31 -  5 - 21 - 76 - 57</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">friday 15/12/2023</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">18 - 33 -  2 - 60 - 26</p>
+                <p class="machine">67 - 65 - 24 - 68 - 69</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">41 - 81 - 32 - 52 -  6</p>
+                <p class="machine">73 - 12 - 72 - 43 -  3</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning"> 4 - 18 - 80 - 23 - 37</p>
+                <p class="machine">64 - 74 - 69 - 63 - 62</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">52 - 59 -  7 - 61 - 88</p>
+                <p class="machine">35 - 29 - 47 - 58 -  2</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">31 - 27 - 83 -  3 - 21</p>
+                <p class="machine">51 - 87 - 81 - 39 - 64</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">89 -  3 - 80 - 87 - 49</p>
+                <p class="machine">85 - 37 - 74 -  7 - 70</p>        
             </article>
         </section>
     </div>
