--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -172,40 +172,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">thursday 14/12/2023</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">45 - 52 -  6 - 23 - 66</p>
-                <p class="machine">64 - 82 -  5 - 16 - 38</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">39 - 11 - 63 - 27 - 36</p>
-                <p class="machine">66 - 84 - 48 - 32 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">54 - 23 - 80 - 84 - 48</p>
-                <p class="machine">25 - 74 - 40 - 75 - 31</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">90 - 70 - 19 - 10 - 62</p>
-                <p class="machine">79 -  2 - 63 - 25 -  3</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">88 - 80 - 52 - 17 - 27</p>
-                <p class="machine">42 - 45 - 72 - 33 - 57</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">27 -  6 - 35 -  9 - 77</p>
-                <p class="machine">31 -  5 - 21 - 76 - 57</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">friday 15/12/2023</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -236,6 +202,40 @@
                 <h3 class="game">vag</h3>
                 <p class="winning">89 -  3 - 80 - 87 - 49</p>
                 <p class="machine">85 - 37 - 74 -  7 - 70</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">saturday 16/12/2023</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">32 - 12 - 61 - 37 -  4</p>
+                <p class="machine">51 - 38 - 57 - 24 - 60</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">45 - 56 - 54 - 84 - 16</p>
+                <p class="machine">32 - 83 - 49 - 77 - 57</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">60 - 81 - 77 - 26 - 63</p>
+                <p class="machine">78 -  8 -  5 - 85 - 24</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">25 - 68 - 16 - 27 - 30</p>
+                <p class="machine">55 - 87 - 75 -  3 - 72</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">39 - 64 -  7 - 53 -  3</p>
+                <p class="machine">49 - 55 - 31 - 87 - 69</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">19 - 52 - 16 - 50 - 76</p>
+                <p class="machine">12 - 89 -  7 - 69 - 87</p>        
             </article>
         </section>
     </div>
