Created Plan & event Page

--- a/index.html
+++ b/index.html
@@ -3,8 +3,26 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Visual Lotto Board</title>
+        <title>Visual Lotto Board | Baba Ijebu and Lotto result, yesterday and past results</title>
         <meta name="description" content="Hologuti Business Centre's visual lotto board is a website for viewing Baba Ijebu and premier lotto last results">
+
+        <!-- Meta Pixel Code -->
+        <script>
+            !function(f,b,e,v,n,t,s)
+            {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+            n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+            if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+            n.queue=[];t=b.createElement(e);t.async=!0;
+            t.src=v;s=b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t,s)}(window, document,'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('init', '1473460776567533');
+            fbq('track', 'PageView');
+            </script>
+            <noscript><img height="1" width="1" style="display:none"
+            src="https://www.facebook.com/tr?id=1473460776567533&ev=PageView&noscript=1"
+            /></noscript>
+            <!-- End Meta Pixel Code -->
 
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -53,6 +71,7 @@
 
                 <div class="navigation">
                     <a href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a>
+                    <a href="/plan.html" id="dailyResult">PLAN & EVENTS</a>
                     <!-- <button class="buy-lrCard">Buy LR Card</button> -->
                 </div> 
                 
