--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                 <div class="navigation">
                     <a href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a>
-                    <a href="/plan.html" id="dailyResult">PLAN & EVENTS</a>
+                    <a href="/plan.html" id="dailyResult" style="color: yellow;">PLAN & EVENTS</a>
                     <!-- <button class="buy-lrCard">Buy LR Card</button> -->
                 </div> 
                 
