Adjusted plan page style

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             </aside>
         </main>
         <footer>
-            <small>Created & Manage By Hologuti Business Centre</small>
+            <small>Created & Managed By Hologuti Business Centre</small>
             <!-- <span>&copy;2023 Hologuti Business Centre - All Rights Reserved</span>   -->
             <div class="contentInfo-wrapper">
                 <a href="#" class="team">Team</a>
