--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -172,40 +172,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">saturday 16/12/2023</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">32 - 12 - 61 - 37 -  4</p>
-                <p class="machine">51 - 38 - 57 - 24 - 60</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">45 - 56 - 54 - 84 - 16</p>
-                <p class="machine">32 - 83 - 49 - 77 - 57</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">60 - 81 - 77 - 26 - 63</p>
-                <p class="machine">78 -  8 -  5 - 85 - 24</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">25 - 68 - 16 - 27 - 30</p>
-                <p class="machine">55 - 87 - 75 -  3 - 72</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">39 - 64 -  7 - 53 -  3</p>
-                <p class="machine">49 - 55 - 31 - 87 - 69</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">19 - 52 - 16 - 50 - 76</p>
-                <p class="machine">12 - 89 -  7 - 69 - 87</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">sunday 17/12/2023</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -236,6 +202,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">83 - 47 - 24 - 28 -  8</p>
                 <p class="machine">57 - 60 - 70 - 69 - 20</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">monday 18/12/2023</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">46 - 12 - 30 - 26 - 18</p>
+                <p class="machine">22 - 61 - 28 - 36 - 70</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">55 - 48 - 22 - 40 - 38</p>
+                <p class="machine">33 - 73 - 24 -  9 - 29</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">25 - 44 - 28 - 73 - 53</p>
+                <p class="machine">79 - 31 - 17 - 87 - 90</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">71 - 80 - 83 - 76 - 35</p>
+                <p class="machine">28 - 19 - 21 - 78 - 45</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">33 - 51 - 70 - 63 - 64</p>
+                <p class="machine">87 - 62 - 34 - 43 - 85</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">14 - 46 -  9 - 21 - 32</p>
+                <p class="machine">57 - 48 - 28 - 20 - 27</p>        
             </article>
         </section>
     </div>
