--- a/plan.html
+++ b/plan.html
@@ -40,6 +40,28 @@
 
         }
 
+        h1 {
+            font-size: 4rem;
+            animation: change-color 5s infinite;
+        }
+            @keyframes change-color {
+                0% {
+                    color: initial;
+                }
+                25% {
+                    opacity: 0.1;
+                }
+                50% {
+                    color: navy;
+                }
+                75% {
+                    color: #0000ff;
+                }
+                100% {
+                    color: #ff0000;
+                }
+            }
+
         section {
             margin: 20px;
         }
@@ -122,8 +144,8 @@
         </nav>
     </header>
     <main>
-        <h1>Metro</h1>
-        <section>
+        <h1>Please Check Back Some Few Time</h1>
+        <!-- <section>
             <p>While we patiently prepared for Jackpot on tuesday 19/12/2023, let quickly glance on the <b>METRO</b> we losed few days ago</p>
             <p>Let pay attention to <i>LUCKY RESULT</i> that will be drawn to day 17/12/2023, and use it against <strong>Metro</strong> tomorrow Monday 18/12/2023 (just permutation)</p>
         </section>
@@ -164,7 +186,7 @@
         <aside>
             <p>Don't forget, <span class="moving-number">55 59</span> is moving 52 18 88, and <span class="moving-number">52</span> is moving 49 & 15</p>
             <p>Now that some of the <span class="moving-number">moving-number</span> have played, you can add the remaining numbers. <br>So, if you are playing long permutation, include (18 - 88 - 49 - 15 - 59) to your game</p>
-        </aside>
+        </aside> -->
     </main>
     
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
