--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -172,40 +172,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">sunday 17/12/2023</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">53 - 18 - 71 -  2 - 73</p>
-                <p class="machine">19 - 16 - 63 - 75 - 31</p>        
-            </article>
-            <article>
-                <h3 class="game">Mark II</h3>
-                <p class="winning">16 - 72 - 81 - 56 - 26</p>
-                <p class="machine">74 - 28 - 51 - 68 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">42 - 37 - 20 - 50 - 72</p>
-                <p class="machine">47 - 58 - 48 - 69 - 19</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">11 -  2 - 83 - 33 - 31</p>
-                <p class="machine">88 - 74 - 58 - 52 - 81</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">26 - 30 - 18 - 14 - 69</p>
-                <p class="machine"> 2 - 85 - 64 - 59 - 57</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">83 - 47 - 24 - 28 -  8</p>
-                <p class="machine">57 - 60 - 70 - 69 - 20</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">monday 18/12/2023</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -238,10 +204,45 @@
                 <p class="machine">57 - 48 - 28 - 20 - 27</p>        
             </article>
         </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">tuesday 19/12/2023</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">18 - 66 - 69 -  2 -  7</p>
+                <p class="machine">40 -  9 - 68 - 23 - 73</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+        </section>
     </div>
     
     <div class="gameList">
         <table>
+            <caption>Game List</caption>
             <thead>
                 <tr>
                     <th>Day</th>
