--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -213,29 +213,29 @@
                 <p class="machine">40 -  9 - 68 - 23 - 73</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">06</h3>
+                <p class="winning">52 - 83 - 40 - 30 - 18</p>
+                <p class="machine">7 - 77 - 49 - 74 - 65</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">74 - 59 - 49 - 83 - 79</p>
+                <p class="machine">61 - 84 - 23 - 12 - 32</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Club Master</h3>
+                <p class="winning">84 - 76 - 87 - 77 - 46</p>
+                <p class="machine">68 - 69 - 24 - 65 - 58</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky G</h3>
+                <p class="winning">7 - 39 - 56 - 55 - 50</p>
+                <p class="machine">29 - 1 - 45 - 38 - 41</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">super</h3>
+                <p class="winning">21 - 36 - 50 - 38 - 45</p>
+                <p class="machine">1 - 31 - 9 - 25 - 42</p>        
             </article>
         </section>
     </div>
