--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -172,40 +172,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">monday 18/12/2023</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">46 - 12 - 30 - 26 - 18</p>
-                <p class="machine">22 - 61 - 28 - 36 - 70</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">55 - 48 - 22 - 40 - 38</p>
-                <p class="machine">33 - 73 - 24 -  9 - 29</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">25 - 44 - 28 - 73 - 53</p>
-                <p class="machine">79 - 31 - 17 - 87 - 90</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">71 - 80 - 83 - 76 - 35</p>
-                <p class="machine">28 - 19 - 21 - 78 - 45</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">33 - 51 - 70 - 63 - 64</p>
-                <p class="machine">87 - 62 - 34 - 43 - 85</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">14 - 46 -  9 - 21 - 32</p>
-                <p class="machine">57 - 48 - 28 - 20 - 27</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">tuesday 19/12/2023</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -236,6 +202,40 @@
                 <h3 class="game">super</h3>
                 <p class="winning">21 - 36 - 50 - 38 - 45</p>
                 <p class="machine">1 - 31 - 9 - 25 - 42</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">wednesday 20/12/2023</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">64 - 45 - 38 - 11 - 63</p>
+                <p class="machine">81 - 33 - 49 - 28 - 65</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">8 - 50 - 19 - 84 - 47</p>
+                <p class="machine">87 - 22 - 55 - 52 - 44</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">83 - 50 - 30 - 86 - 59</p>
+                <p class="machine">9 - 34 - 11 - 39 - 21</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">19 - 77 - 42 - 37 - 74</p>
+                <p class="machine">67 - 47 - 61 - 23 - 48</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">65 - 9 - 80 - 38 - 79</p>
+                <p class="machine">54 - 48 - 32 - 37 - 30</p>        
+            </article>
+            <article>
+                <h3 class="game">lucky</h3>
+                <p class="winning">20 - 50 - 77 - 37 - 5</p>
+                <p class="machine">67 - 52 - 89 - 47 - 88</p>        
             </article>
         </section>
     </div>
