--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -172,40 +172,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">tuesday 19/12/2023</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">18 - 66 - 69 -  2 -  7</p>
-                <p class="machine">40 -  9 - 68 - 23 - 73</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">52 - 83 - 40 - 30 - 18</p>
-                <p class="machine">7 - 77 - 49 - 74 - 65</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">74 - 59 - 49 - 83 - 79</p>
-                <p class="machine">61 - 84 - 23 - 12 - 32</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">84 - 76 - 87 - 77 - 46</p>
-                <p class="machine">68 - 69 - 24 - 65 - 58</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky G</h3>
-                <p class="winning">7 - 39 - 56 - 55 - 50</p>
-                <p class="machine">29 - 1 - 45 - 38 - 41</p>        
-            </article>
-            <article>
-                <h3 class="game">super</h3>
-                <p class="winning">21 - 36 - 50 - 38 - 45</p>
-                <p class="machine">1 - 31 - 9 - 25 - 42</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">wednesday 20/12/2023</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -236,6 +202,40 @@
                 <h3 class="game">lucky</h3>
                 <p class="winning">20 - 50 - 77 - 37 - 5</p>
                 <p class="machine">67 - 52 - 89 - 47 - 88</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">thursday 21/12/2023</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">26 - 82 - 23 - 85 - 44</p>
+                <p class="machine">41 - 12 - 40 - 58 - 48</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">25 - 40 - 43 - 49 - 45</p>
+                <p class="machine">85 - 56 - 13 - 38 - 04</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">79 - 16 - 48 - 59 - 57</p>
+                <p class="machine">23 - 66 - 86 - 22 - 2</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">35 - 18 - 15 - 53 - 21</p>
+                <p class="machine">72 - 61 - 55 - 47 - 56</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">16 - 41 - 67 - 32 - 38</p>
+                <p class="machine">58 - 13 - 51 - 40 - 49</p>        
+            </article>
+            <article>
+             <h3 class="game">Bingo</h3>
+                <p class="winning">21 - 57 - 9 - 59 - 42</p>
+                <p class="machine">38 - 35 - 66 - 79 - 82</p>        
             </article>
         </section>
     </div>
