--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -172,40 +172,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">wednesday 20/12/2023</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">64 - 45 - 38 - 11 - 63</p>
-                <p class="machine">81 - 33 - 49 - 28 - 65</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">8 - 50 - 19 - 84 - 47</p>
-                <p class="machine">87 - 22 - 55 - 52 - 44</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">83 - 50 - 30 - 86 - 59</p>
-                <p class="machine">9 - 34 - 11 - 39 - 21</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">19 - 77 - 42 - 37 - 74</p>
-                <p class="machine">67 - 47 - 61 - 23 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">65 - 9 - 80 - 38 - 79</p>
-                <p class="machine">54 - 48 - 32 - 37 - 30</p>        
-            </article>
-            <article>
-                <h3 class="game">lucky</h3>
-                <p class="winning">20 - 50 - 77 - 37 - 5</p>
-                <p class="machine">67 - 52 - 89 - 47 - 88</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">thursday 21/12/2023</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -236,6 +202,40 @@
              <h3 class="game">Bingo</h3>
                 <p class="winning">21 - 57 - 9 - 59 - 42</p>
                 <p class="machine">38 - 35 - 66 - 79 - 82</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">friday 22/12/2023</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">35 - 38 - 60 - 40 -43</p>
+                <p class="machine">70 - 12 - 77 - 82 - 28</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">51 - 7 -  2 -  33 -  8</p>
+                <p class="machine">84 - 79 - 70 - 37 - 86</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">47 - 53 - 51 - 82 - 84</p>
+                <p class="machine">29 - 16 - 9 - 41 - 30</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">7 - 51 - 80 - 58 - 56</p>
+                <p class="machine">76 - 28 - 35 - 67 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">23 - 74 - 64 - 1 - 82</p>
+                <p class="machine">25 - 9 - 89 - 39 - 52</p>        
+            </article>
+            <article>
+                <h3 class="game">Vag</h3>
+                <p class="winning">78 - 55 - 42 - 10 - 47</p>
+                <p class="machine">7 - 61 - 18 - 60 - 68</p>        
             </article>
         </section>
     </div>
