--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -172,40 +172,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">thursday 21/12/2023</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">26 - 82 - 23 - 85 - 44</p>
-                <p class="machine">41 - 12 - 40 - 58 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">25 - 40 - 43 - 49 - 45</p>
-                <p class="machine">85 - 56 - 13 - 38 - 04</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">79 - 16 - 48 - 59 - 57</p>
-                <p class="machine">23 - 66 - 86 - 22 - 2</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">35 - 18 - 15 - 53 - 21</p>
-                <p class="machine">72 - 61 - 55 - 47 - 56</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">16 - 41 - 67 - 32 - 38</p>
-                <p class="machine">58 - 13 - 51 - 40 - 49</p>        
-            </article>
-            <article>
-             <h3 class="game">Bingo</h3>
-                <p class="winning">21 - 57 - 9 - 59 - 42</p>
-                <p class="machine">38 - 35 - 66 - 79 - 82</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">friday 22/12/2023</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -236,6 +202,40 @@
                 <h3 class="game">Vag</h3>
                 <p class="winning">78 - 55 - 42 - 10 - 47</p>
                 <p class="machine">7 - 61 - 18 - 60 - 68</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">saturday 23/12/2023</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">36 - 72 - 59 - 73 - 64</p>
+                <p class="machine">24 - 46 - 31 - 58 - 48</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">34 - 67 - 69 - 72 - 73</p>
+                <p class="machine">19 - 64 - 39 - 21 - 33</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">62 - 10 - 53 - 80 - 19</p>
+                <p class="machine">22 - 13 - 83 - 11 - 46</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">24 - 12 - 76 - 90 - 44</p>
+                <p class="machine">85 - 5 - 74 - 31 - 32</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">36 - 69 - 61 - 17 - 57</p>
+                <p class="machine">66 - 2 - 50 - 42 - 40</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">81 - 26 - 36 - 75 - 18</p>
+                <p class="machine">69 -  2 - 58 - 51 - 10</p>        
             </article>
         </section>
     </div>
