--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -172,40 +172,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">friday 22/12/2023</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">35 - 38 - 60 - 40 -43</p>
-                <p class="machine">70 - 12 - 77 - 82 - 28</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">51 - 7 -  2 -  33 -  8</p>
-                <p class="machine">84 - 79 - 70 - 37 - 86</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">47 - 53 - 51 - 82 - 84</p>
-                <p class="machine">29 - 16 - 9 - 41 - 30</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">7 - 51 - 80 - 58 - 56</p>
-                <p class="machine">76 - 28 - 35 - 67 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">23 - 74 - 64 - 1 - 82</p>
-                <p class="machine">25 - 9 - 89 - 39 - 52</p>        
-            </article>
-            <article>
-                <h3 class="game">Vag</h3>
-                <p class="winning">78 - 55 - 42 - 10 - 47</p>
-                <p class="machine">7 - 61 - 18 - 60 - 68</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">saturday 23/12/2023</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -236,6 +202,40 @@
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">81 - 26 - 36 - 75 - 18</p>
                 <p class="machine">69 -  2 - 58 - 51 - 10</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">sunday 24/12/2023</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">16 - 89 - 82 - 87 - 53</p>
+                <p class="machine">54 - 62 - 19 - 5 - 73</p>        
+            </article>
+            <article>
+                <h3 class="game">mark II</h3>
+                <p class="winning">85 - 28 - 51 - 56 - 65</p>
+                <p class="machine">88 - 4 - 30 - 67 - 16</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">83 - 60 - 61 - 31 - 44</p>
+                <p class="machine">55 - 81 - 79 - 75 - 49</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">59 - 38 - 87 - 41 - 89</p>
+                <p class="machine">23 - 35 - 83 - 34 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">15 - 32 - 20 - 16 - 31</p>
+                <p class="machine">40 - 61 - 2 - 28 - 18</p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">85 - 8 - 76 - 50 - 58</p>
+                <p class="machine">86 - 14 - 82 - 79 - 83</p>        
             </article>
         </section>
     </div>
