Result Xmas day 25/12/2023

--- a/GAMES/6Diamond.html
+++ b/GAMES/6Diamond.html
@@ -562,6 +562,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">25</td>
+                    <td class="days"><small>mon 25th Dec <br> <span class="xMas-tree">&#127876</span></small></td>
+
+                    <!-- winning-->
+                    <td class="winning">55</td>
+                    <td class="winning">10</td>
+                    <td class="winning">50</td>
+                    <td class="winning">20</td>
+                    <td class="winning" id="lbw">21</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">14</td>
+                    <td class="machine">44</td>
+                    <td class="machine">49</td>
+                    <td class="machine">41</td>
+                    <td class="machine" id="lbm">8</td>
+                </tr>
+            </tbody>
+
+                                    <!-- day26-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">26</td>
                     <td class="days"><small></small></td>
                 
                     <!-- winning-->
