--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -60,6 +60,12 @@
             color: #ff0000;
         }
 
+        span {
+            font-size: 10rem;
+            animation: move 5s ease infinite reverse;
+        }
+           
+
 
         /* table */
         .gameList {
@@ -171,41 +177,8 @@
         </nav>
     </header>
     <div class="gameResults">
+        <span>&#127876</span>
         <section aria-label="two days ago result">
-            <h2 class="date">saturday 23/12/2023</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">36 - 72 - 59 - 73 - 64</p>
-                <p class="machine">24 - 46 - 31 - 58 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">34 - 67 - 69 - 72 - 73</p>
-                <p class="machine">19 - 64 - 39 - 21 - 33</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">62 - 10 - 53 - 80 - 19</p>
-                <p class="machine">22 - 13 - 83 - 11 - 46</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">24 - 12 - 76 - 90 - 44</p>
-                <p class="machine">85 - 5 - 74 - 31 - 32</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">36 - 69 - 61 - 17 - 57</p>
-                <p class="machine">66 - 2 - 50 - 42 - 40</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">81 - 26 - 36 - 75 - 18</p>
-                <p class="machine">69 -  2 - 58 - 51 - 10</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">sunday 24/12/2023</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -238,6 +211,37 @@
                 <p class="machine">86 - 14 - 82 - 79 - 83</p>        
             </article>
         </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">monday 25/12/2023</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">55 - 10 - 50 - 20 - 21</p>
+                <p class="machine">14 - 44 - 49 - 41 - 8</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">87 - 53 - 85 - 69 - 71</p>
+                <p class="machine">57 - 73 - 78 - 33 - 49</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">14 - 50 - 9 - 87 - 26</p>
+                <p class="machine">70 - 46 - 4 - 15 - 11</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">48 - 77 - 30 - 5 - 44</p>
+                <p class="machine">11 - 29 - 55 - 34 - 12</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">49 - 72 - 61 - 70 - 24</p>
+                <p class="machine">47 - 18 - 26 - 69 - 27</p>        
+            </article>
+        </section>
+        <span>&#127876</span>
+
     </div>
     
     <div class="gameList">
