--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <div class="navigation">
                     <a href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a>
                     <a href="/plan.html" id="dailyResult" style="color: yellow;">PLAN & EVENTS</a>
+                    <span class="merry-christmas">Merry Christmas</span>
                     <!-- <button class="buy-lrCard">Buy LR Card</button> -->
                 </div> 
                 
