--- a/GAMES/10Inter.html
+++ b/GAMES/10Inter.html
@@ -564,21 +564,21 @@
             <tbody>
                 <tr>
                     <td class="serial-num">25</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>mon 25th Dec <br> <span class="xMas-tree">&#127876</span></small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">49</td>
+                    <td class="winning">72</td>
+                    <td class="winning">61</td>
+                    <td class="winning">70</td>
+                    <td class="winning" id="lbw">24</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">47</td>
+                    <td class="machine">18</td>
+                    <td class="machine">26</td>
+                    <td class="machine">69</td>
+                    <td class="machine" id="lbm">27</td>
                 </tr>
             </tbody>
 
