--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
             </aside>
         </main>
         <footer>
-            <small>Created & Managed By Hologuti Business Centre</small>
+            <small>Created & Manage <br> By <br> Hologuti Business Centre</small>
+            <img src="https://i.postimg.cc/x1YB05Sf/hbc-logo-180.png" aria-hidden="true">
             <!-- <span>&copy;2023 Hologuti Business Centre - All Rights Reserved</span>   -->
             <div class="contentInfo-wrapper">
                 <a href="#" class="team">Team</a>
