--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,40 +179,6 @@
     <div class="gameResults">
         <span>&#127876</span>
         <section aria-label="two days ago result">
-            <h2 class="date">sunday 24/12/2023</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">16 - 89 - 82 - 87 - 53</p>
-                <p class="machine">54 - 62 - 19 - 5 - 73</p>        
-            </article>
-            <article>
-                <h3 class="game">mark II</h3>
-                <p class="winning">85 - 28 - 51 - 56 - 65</p>
-                <p class="machine">88 - 4 - 30 - 67 - 16</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">83 - 60 - 61 - 31 - 44</p>
-                <p class="machine">55 - 81 - 79 - 75 - 49</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">59 - 38 - 87 - 41 - 89</p>
-                <p class="machine">23 - 35 - 83 - 34 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">15 - 32 - 20 - 16 - 31</p>
-                <p class="machine">40 - 61 - 2 - 28 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">85 - 8 - 76 - 50 - 58</p>
-                <p class="machine">86 - 14 - 82 - 79 - 83</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">monday 25/12/2023</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -238,6 +204,40 @@
                 <h3 class="game">International</h3>
                 <p class="winning">49 - 72 - 61 - 70 - 24</p>
                 <p class="machine">47 - 18 - 26 - 69 - 27</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">tuesday 26/12/2023</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">54 - 50 - 52 - 9 - 21</p>
+                <p class="machine">2 - 30 - 78 - 31 - 88</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">90 - 6 - 72 - 35 - 70</p>
+                <p class="machine">14 - 64 - 89 - 74 - 79</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">30 - 71 - 66 - 42 - 55</p>
+                <p class="machine">6 - 43 - 26 - 51 - 48</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">75 - 52 - 10 - 83 - 26</p>
+                <p class="machine">41 - 84 - 74 - 79 - 31</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">84 - 42 - 80 - 16 - 40</p>
+                <p class="machine">85 - 77 - 65 - 32 - 75</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
             </article>
         </section>
         <span>&#127876</span>
