--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,35 +179,6 @@
     <div class="gameResults">
         <span>&#127876</span>
         <section aria-label="two days ago result">
-            <h2 class="date">monday 25/12/2023</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">55 - 10 - 50 - 20 - 21</p>
-                <p class="machine">14 - 44 - 49 - 41 - 8</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">87 - 53 - 85 - 69 - 71</p>
-                <p class="machine">57 - 73 - 78 - 33 - 49</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">14 - 50 - 9 - 87 - 26</p>
-                <p class="machine">70 - 46 - 4 - 15 - 11</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">48 - 77 - 30 - 5 - 44</p>
-                <p class="machine">11 - 29 - 55 - 34 - 12</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">49 - 72 - 61 - 70 - 24</p>
-                <p class="machine">47 - 18 - 26 - 69 - 27</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">tuesday 26/12/2023</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -234,12 +205,47 @@
                 <p class="winning">84 - 42 - 80 - 16 - 40</p>
                 <p class="machine">85 - 77 - 65 - 32 - 75</p>        
             </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">wednesday 27/12/2023</h2>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Tota</h3>
+                <p class="winning">57 - 30 - 82 - 39 - 56</p>
+                <p class="machine">36 - 44 - 80 - 40 - 19</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">6 - 60 - 18 - 24 - 8</p>
+                <p class="machine">57 - 33 - 53 - 82 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">86 - 85 - 12 - 23 - 90</p>
+                <p class="machine">75 - 35 - 56 - 30 - 63</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">23 - 1 - 16 - 32 - 49</p>
+                <p class="machine">66 - 53 - 80 - 18 - 60</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">41 - 48 - 11 - 29 - 6</p>
+                <p class="machine">30 - 62 - 63 - 39 - 27</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">81 - 85 - 52 - 22 - 69</p>
+                <p class="machine">84 - 58 - 14 - 5 - 8</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">19 - 83 - 27 - 71 - 29</p>
+                <p class="machine">36 - 82 - 49 - 9 - 20</p>        
             </article>
         </section>
+
         <span>&#127876</span>
 
     </div>
